# pi_hotspot_wlan_setter

./: Makefile  README.md  install.sh  install_reqs.sh  pyproject.toml  restart_hotspot.sh  run_command.sh
configs/: dhcpcd-wlan0-hotspot.conf.snippet  dnsmasq-hotspot.conf  hostapd.conf
scripts/: captive-portal.sh
src/hotspot_connection_setter/: app.py  cli.py
src/hotspot_connection_setter/tabs/: env_tab.py  file_tab.py  tab_network.py  view_tab.py
systemd/: captive-portal.service  hotspot-onboot.service  hotspot-shutdown.service  hotspot-shutdown.timer  hotspot-ui.service  pi-hotspot-nm.service  setup-hotspot.target
