[tool.poetry]
name = 'Hotspot Connection setter'
version = '0.1.0'

[tool.poetry.dependencies]
python = '^3.13'
streamlit = "^1.51.0"

[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'

[[tool.poetry.packages]]
include = "hotspot_connection_setter"
from = "src"