[tool.poetry]
name = "hotspot-connection-setter"
version = "0.1.0"
description = "Hotspot connection setup UI for Raspberry Pi"
authors = ["Your Name <you@example.com>"]  # optional, adjust or remove

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
streamlit = "^1.51.0"

[tool.poetry.group.dev.dependencies]
ipython = "^9.7.0"
ruff = "^0.14.7"
mypy = "^1.19.0"

[tool.poetry.scripts]
hotspot-ui = "hotspot_connection_setter.cli:main"

[[tool.poetry.packages]]
include = "hotspot_connection_setter"
from = "src"

[build-system]
requires = ["poetry-core~=1.0"]
build-backend = "poetry.core.masonry.api"
